my-apps/nexterm/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skynetlabs-nexterm
  namespace: default
  labels:
    app: skynetlabs-nexterm
  annotations: {}
spec:
  selector:
    matchLabels:
      app: skynetlabs-nexterm
  template:
    metadata:
      labels:
        app: skynetlabs-nexterm
    spec:
      containers:
        - name: skynetlabs-nexterm
          image: germannewsmaker/nexterm:1.0.5-OPEN-PREVIEW
          volumeMounts:
            - name: skynetlabs-nexterm-data
              mountPath: /app/data
          ports:
            - containerPort: 6989
              protocol: TCP
      volumes:
        - name: skynetlabs-nexterm-data
          emptyDir: {}
  replicas: 1
