my-apps/nexterm/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nexterm
  namespace: nexterm
spec:
  parentRefs:
    - name: gateway-external    # Must match your Gateway's metadata.name
      namespace: gateway
      sectionName: https       # Must match your Gateway's listeners[].name
  hostnames:
  - "nexterm.homelabjunkie.com"
  rules:
  - matches:
    - path:
        type: PathPrefix 
        value: /
    backendRefs:
    - name: nexterm
      port: 8080
